<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homePage"
            android:icon="@drawable/ic_home"
            android:title="@string/homePage" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_orderManagement"
            android:icon="@drawable/ic_list"
            android:title="@string/orderManagement" />
        <item
            android:id="@+id/nav_accountManagement"
            android:icon="@drawable/ic_usermanagement"
            android:title="@string/accountManagement" />
    </group>

</menu>
