<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cart_item"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:padding="15dp">

    <ImageView
        android:id="@+id/imageViewCart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:contentDescription="@string/contentDescription"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.65"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/cart_itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxLines="3"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cart_itemCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btGiamMatHang"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/substract"
                android:textSize="25sp" />

            <Button

                android:id="@+id/btSoLuongMatHang"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:focusable="false"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btTangMatHang"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/additive"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/removeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:background="@android:color/transparent"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/ic_dialog_close_light" />


</LinearLayout>