<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/newItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/newItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newItems"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/seeall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="end"
                    android:onClick="seeNewItemList"
                    android:text="@string/seeAll"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_newItemList"
            android:layout_width="wrap_content"
            android:layout_height="150dp" />

        <LinearLayout
            android:id="@+id/hotItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hotItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotItems"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/seeall2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="end"
                    android:onClick="seeHotItemList"
                    android:text="@string/seeAll"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_hotItemList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>